--- a/_posts/2023-09-05-welcome.markdown
+++ b/_posts/2023-09-05-welcome.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "Welcome!"
 date:   2023-09-05 17:13:00 -0500
 categories: about
+permalink: /posts/welcome.html
 ---
 Welcome to my blog!
 
